--- a/beelzebub-web/package.json
+++ b/beelzebub-web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/components": "^4.0.0-1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.5",
     "@types/react": "16.8.19",
@@ -10,6 +11,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.3.1",
+    "styled-system": "^5.0.5",
+    "styled-system-html": "^3.0.0",
     "typescript": "3.5.1"
   },
   "scripts": {
