--- a/beelzebub-web/package.json
+++ b/beelzebub-web/package.json
@@ -11,8 +11,9 @@
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "rebass": "^3.1.1",
     "styled-components": "^4.3.1",
     "styled-system": "^5.0.5",
     "styled-system-html": "^3.0.0",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/rebass": "^3.0.4"
+    "@types/react-router-dom": "^4.3.3",
+    "@types/styled-components": "^4.1.16"
   }
 }
