--- a/beelzebub-server/package.json
+++ b/beelzebub-server/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@types/graphql": "^14.2.0",
 		"@types/lodash": "^4.14.134",
+		"@types/ramda": "^0.26.9",
 		"nodemon": "^1.19.1",
 		"ts-node": "^8.2.0",
 		"ts-node-dev": "^1.0.0-pre.39",
@@ -18,6 +19,7 @@
 	"dependencies": {
 		"apollo-server": "^2.6.2",
 		"graphql": "^14.3.1",
-		"lodash": "^4.17.11"
+		"lodash": "^4.17.11",
+		"ramda": "^0.26.1"
 	}
 }
