--- a/beelzebub-web/package.json
+++ b/beelzebub-web/package.json
@@ -9,7 +9,12 @@
 		"@types/node": "12.0.5",
 		"@types/react": "16.8.19",
 		"@types/react-dom": "16.8.4",
+		"apollo-cache-inmemory": "^1.6.2",
+		"apollo-client": "^2.6.2",
+		"apollo-link-http": "^1.5.14",
 		"react": "^16.8.6",
+		"react-apollo": "^2.5.6",
+		"react-apollo-hooks": "^0.4.5",
 		"react-dom": "^16.8.6",
 		"react-router": "^5.0.1",
 		"react-router-dom": "^5.0.1",
