--- a/beelzebub-web/package.json
+++ b/beelzebub-web/package.json
@@ -19,7 +19,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.3.1",
+    "rebass": "^3.1.1",
+    "styled-components": "5.0.0-beta.8",
     "styled-system": "^5.0.5",
     "styled-system-html": "^3.0.0",
     "typescript": "3.5.1"
@@ -53,8 +54,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^4.3.3",
+    "@types/rebass": "^3.0.4",
     "@types/styled-components": "^4.1.16",
     "apollo": "^2.13.0",
+    "prettier": "^1.18.2",
     "tslint": "^5.18.0"
   }
 }
