--- a/beelzebub-web/package.json
+++ b/beelzebub-web/package.json
@@ -23,7 +23,8 @@
     "styled-components": "5.0.0-beta.8",
     "styled-system": "^5.0.5",
     "styled-system-html": "^3.0.0",
-    "typescript": "3.5.1"
+    "typescript": "3.5.1",
+    "use-query-params": "^0.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
