--- a/web/package.json
+++ b/web/package.json
@@ -57,6 +57,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/rebass": "^3.0.4",
     "@types/styled-components": "^4.1.16",
+    "@types/styled-system": "^5.1.4",
     "apollo": "^2.21.2",
     "prettier": "^1.18.2",
     "tslint": "^5.18.0"
