--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,37 @@
 {
-	"name": "beelzebub-server",
-	"version": "0.1.0",
-	"main": "index.ts",
-	"license": "MIT",
-	"private": false,
-	"scripts": {
-		"start": "ts-node-dev src/index.ts",
-		"schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
-		"schema:validate": "npx apollo service:check"
-	},
-	"devDependencies": {
-		"@types/graphql": "^14.2.0",
-		"@types/lodash": "^4.14.134",
-		"@types/ramda": "^0.26.9",
-		"nodemon": "^1.19.1",
-		"ts-node": "^8.2.0",
-		"ts-node-dev": "^1.0.0-pre.39",
-		"typescript": "^3.5.1"
-	},
-	"dependencies": {
-		"apollo-server": "^2.6.2",
-		"graphql": "^14.3.1",
-		"lodash": "^4.17.11",
-		"ramda": "^0.26.1"
-	}
+  "name": "beelzebub-server",
+  "version": "0.1.0",
+  "main": "index.ts",
+  "license": "MIT",
+  "private": false,
+  "scripts": {
+    "start": "ts-node-dev src/index.ts",
+    "build": "tsc",
+    "deploy": "yarn build && sls deploy",
+    "schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
+    "schema:validate": "npx apollo service:check"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.39",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/graphql": "^14.2.0",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^13.1.1",
+    "@types/ramda": "^0.26.9",
+    "nodemon": "^1.19.1",
+    "serverless-offline": "^5.12.1",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
+    "tslint": "^5.5.0",
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "apollo-server": "^2.6.2",
+    "aws-lambda": "^1.0.4",
+    "graphql": "^14.3.1",
+    "lodash": "^4.17.11",
+    "ramda": "^0.26.1",
+    "uuid": "^3.1.0"
+  }
 }
