--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "ts-node-dev src/index.ts",
     "build": "tsc",
     "deploy": "yarn build && sls deploy",
+    "serve": "sls offline start",
     "schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
     "schema:validate": "npx apollo service:check"
   },
@@ -20,6 +21,7 @@
     "@types/ramda": "^0.26.9",
     "nodemon": "^1.19.1",
     "serverless-offline": "^5.12.1",
+    "serverless-plugin-typescript": "^1.1.9",
     "ts-node": "^8.2.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.5.0",
