--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.6.2",
+    "apollo-server-lambda": "^2.9.15",
     "aws-lambda": "^1.0.4",
     "graphql": "^14.3.1",
     "lodash": "^4.17.11",
