--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "@types/graphql": "^14.2.0",
     "@types/lodash": "^4.14.134",
     "@types/node": "^13.1.1",
+    "@types/pg": "^7.14.0",
+    "@types/pg-connection-string": "^2.0.0",
     "@types/ramda": "^0.26.9",
     "nodemon": "^1.19.1",
     "serverless-offline": "^5.12.1",
@@ -29,10 +31,15 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "apollo-server-lambda": "^2.9.15",
     "aws-lambda": "^1.0.4",
+    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "graphql": "^14.3.1",
     "lodash": "^4.17.11",
+    "pg": "^7.16.0",
+    "pg-connection-string": "^2.1.0",
     "ramda": "^0.26.1",
     "uuid": "^3.1.0"
   }
