--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "sls offline start",
     "build": "tsc",
-    "deploy": "yarn build && sls deploy",
-    "serve": "yarn build && sls offline start",
+    "deploy": "sls deploy",
+    "serve": "sls offline start",
     "schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
     "schema:validate": "npx apollo service:check"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/aws-lambda": "^8.10.39",
     "@types/aws-sdk": "^2.7.0",
     "@types/graphql": "^14.2.0",
@@ -21,17 +22,22 @@
     "@types/pg": "^7.14.0",
     "@types/pg-connection-string": "^2.0.0",
     "@types/ramda": "^0.26.9",
+    "cache-loader": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
     "nodemon": "^1.19.1",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-typescript": "^1.1.9",
+    "serverless-webpack": "^5.3.1",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.2.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.5.0",
     "tslint-config-standard": "^6.0.1",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "webpack": "^4.41.5",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
     "apollo-server-lambda": "^2.9.15",
     "aws-lambda": "^1.0.4",
     "axios": "^0.19.0",
