--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -6,19 +6,25 @@ provider:
   runtime: nodejs12.x
 
 plugins:
+  - serverless-webpack
   - serverless-offline
 
 custom:
   serverless-offline:
     port: 4000
+  webpack:
+    webpackConfig: 'webpack.config.js' # Name of webpack configuration file
+    includeModules: false # Node modules configuration for packaging
+    packager: 'yarn' # Packager that will be used to package your external modules
+    excludeFiles: src/**/*.test.js # Provide a glob for files to ignore
 
 functions:
   hello:
-    handler: .build/src/index.handlerPT
+    handler: src/index.handlerPT
     events:
       - http: GET hello
   graphql:
-    handler: .build/src/index.handler
+    handler: src/index.handler
     events:
       - http:
           method: any
