--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,19 @@
     "schema:validate": "npx apollo service:check"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-typescript": "^7.7.7",
     "@types/aws-lambda": "^8.10.39",
     "@types/aws-sdk": "^2.7.0",
+    "@types/dotenv": "^8.2.0",
     "@types/graphql": "^14.2.0",
     "@types/lodash": "^4.14.134",
     "@types/node": "^13.1.1",
     "@types/pg": "^7.14.0",
     "@types/pg-connection-string": "^2.0.0",
     "@types/ramda": "^0.26.9",
+    "babel-loader": "^8.0.6",
     "cache-loader": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
     "nodemon": "^1.19.1",
@@ -38,11 +42,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "apollo-datasource": "^0.6.4",
     "apollo-server-lambda": "^2.9.15",
     "aws-lambda": "^1.0.4",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.6",
     "lodash": "^4.17.11",
     "pg": "^7.16.0",
     "pg-connection-string": "^2.1.0",
