--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,12 +5,12 @@
     "inlineSources": true,
     "inlineSourceMap": true,
     "sourceRoot": "/",
-    "target": "es2017",
+    "target": "ES2018",
     "outDir": ".build",
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["es2017"],
+    "lib": ["ES2018"],
     "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
