--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,54 @@
 {
-	"name": "beelzebub-server",
-	"version": "0.1.0",
-	"main": "index.ts",
-	"license": "MIT",
-	"private": false,
-	"scripts": {
-		"start": "ts-node-dev src/index.ts",
-		"schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
-		"schema:validate": "npx apollo service:check"
-	},
-	"devDependencies": {
-		"@types/graphql": "^14.2.0",
-		"@types/lodash": "^4.14.134",
-		"@types/ramda": "^0.26.9",
-		"nodemon": "^1.19.1",
-		"ts-node": "^8.2.0",
-		"ts-node-dev": "^1.0.0-pre.39",
-		"typescript": "^3.5.1"
-	},
-	"dependencies": {
-		"apollo-server": "^2.6.2",
-		"graphql": "^14.3.1",
-		"lodash": "^4.17.11",
-		"ramda": "^0.26.1"
-	}
+  "name": "beelzebub-server",
+  "version": "0.1.0",
+  "main": "index.ts",
+  "license": "MIT",
+  "private": false,
+  "scripts": {
+    "start": "sls offline start",
+    "build": "tsc",
+    "deploy": "sls deploy",
+    "serve": "sls offline start",
+    "schema:push": "npx apollo service:push --endpoint=http://localhost:4000",
+    "schema:validate": "npx apollo service:check"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.39",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/graphql": "^14.2.0",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^13.1.1",
+    "@types/pg": "^7.14.0",
+    "@types/pg-connection-string": "^2.0.0",
+    "@types/ramda": "^0.26.9",
+    "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
+    "nodemon": "^1.19.1",
+    "serverless-dotenv-plugin": "^2.1.1",
+    "serverless-offline": "^5.12.1",
+    "serverless-plugin-typescript": "^1.1.9",
+    "serverless-webpack": "^5.3.1",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
+    "tslint": "^5.5.0",
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^3.5.1",
+    "webpack": "^4.41.5",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "apollo-datasource": "^0.6.4",
+    "apollo-server-lambda": "^2.9.15",
+    "aws-lambda": "^1.0.4",
+    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.6",
+    "lodash": "^4.17.11",
+    "pg": "^7.16.0",
+    "pg-connection-string": "^2.1.0",
+    "ramda": "^0.26.1",
+    "uuid": "^3.1.0"
+  }
 }
