--- a/web/package.json
+++ b/web/package.json
@@ -2,33 +2,14 @@
   "name": "beelzebub-web",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.0.2",
-    "@rebass/components": "^4.0.0-1",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.2",
-    "apollo-link-http": "^1.5.14",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
-    "react-apollo-hooks": "^0.4.5",
-    "react-dom": "^16.8.6",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "rebass": "^4.0.0",
-    "styled-components": "5.0.0-beta.8",
-    "styled-system": "^5.0.5",
-    "styled-system-html": "^3.0.0",
-    "typescript": "3.5.1",
-    "use-query-params": "^0.3.3"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "schema:download": "apollo client:download-schema ./src/schema.graphql",
-    "schema:gen": "apollo client:codegen src/core/types/schemaTypes.ts --localSchemaFile=./src/schema.json --outputFlat --target=typescript ",
+    "schema:download": "apollo client:download-schema src/schema.graphql",
+    "schema:gen": "apollo codegen:generate graphqlGenTypes --excludes=node_modules/* --includes=**/*.tsx --globalTypesFile=src/core/types/globalTypes.ts --localSchemaFile src/schema.graphql --target typescript --tagName gql",
+    "schema:gen:remote": "apollo codegen:generate graphqlGenTypes --excludes=node_modules/* --includes=**/*.tsx --globalTypesFile=src/core/types/globalTypes.ts --endpoint http://localhost:4000/graphql --target typescript --tagName gql --watch",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "prettier-opts": "prettier --write --parser typescript --single-quote",
     "prettier": "yarn prettier-opts \"./src/**/*.{ts,tsx}\"",
@@ -48,6 +29,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.0.2",
+    "@rebass/components": "^4.0.0-1",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.2",
+    "apollo-link-http": "^1.5.14",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-apollo-hooks": "^0.4.5",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "rebass": "^4.0.0",
+    "styled-components": "5.0.0-beta.8",
+    "styled-system": "^5.0.5",
+    "styled-system-html": "^3.0.0",
+    "typescript": "3.5.1",
+    "use-query-params": "^0.3.3"
   },
   "devDependencies": {
     "@types/jest": "24.0.13",
