--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,33 +16,16 @@
     "jsx": "preserve",
     "baseUrl": "."
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "paths": {
-    "@material-ui/core": [
-      "./material-ui/src"
-    ],
-    "@material-ui/core/*": [
-      "./material-ui/src/*"
-    ],
-    "@material-ui/lab": [
-      "./material-ui-lab/src"
-    ],
-    "@material-ui/lab/*": [
-      "./material-ui-lab/src/*"
-    ],
-    "@material-ui/styles": [
-      "./material-ui-styles/src"
-    ],
-    "@material-ui/styles/*": [
-      "./material-ui-styles/src/*"
-    ],
-    "@material-ui/system": [
-      "./material-ui-system/src"
-    ],
-    "@material-ui/types": [
-      "./material-ui-types"
-    ]
-  }
+    "@material-ui/core": ["./material-ui/src"],
+    "@material-ui/core/*": ["./material-ui/src/*"],
+    "@material-ui/lab": ["./material-ui-lab/src"],
+    "@material-ui/lab/*": ["./material-ui-lab/src/*"],
+    "@material-ui/styles": ["./material-ui-styles/src"],
+    "@material-ui/styles/*": ["./material-ui-styles/src/*"],
+    "@material-ui/system": ["./material-ui-system/src"],
+    "@material-ui/types": ["./material-ui-types"]
+  },
+  "exclude": ["src/core/types/globalTypes.ts"]
 }
