Updates readme, package json and tslint

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "sls offline start",
+    "start": "yarn serve",
     "build": "tsc",
     "deploy": "sls deploy",
     "serve": "sls offline start",
