--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/graphql": "^14.2.0",
     "@types/lodash": "^4.14.134",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^13.1.1",
     "@types/pg": "^7.14.0",
     "@types/pg-connection-string": "^2.0.0",
@@ -46,6 +47,8 @@
     "graphql": "^14.3.1",
     "graphql-tools": "^4.0.6",
     "lodash": "^4.17.11",
+    "lowdb": "^1.0.0",
+    "nanoid": "^3.1.3",
     "pg": "^7.16.0",
     "pg-connection-string": "^2.1.0",
     "ramda": "^0.26.1",
