--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "lib": ["ES2018"],
-    "rootDir": "./src",
+    // "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
       "*": ["*"]
