--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,6 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.0.2",
-    "@rebass/components": "^4.0.0-1",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.2",
     "apollo-link-http": "^1.5.14",
@@ -43,11 +42,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "rebass": "^4.0.0",
-    "styled-components": "5.0.0-beta.8",
-    "styled-system": "^5.0.5",
-    "styled-system-html": "^3.0.0",
-    "typescript": "3.5.1",
+    "theme-ui": "^0.3.1",
+    "typescript": "3.8.3",
     "use-query-params": "^0.3.3"
   },
   "devDependencies": {
@@ -56,9 +52,7 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^5.1.3",
-    "@types/rebass": "^3.0.4",
-    "@types/styled-components": "^4.1.16",
-    "@types/styled-system": "^5.1.4",
+    "@types/theme-ui": "^0.3.1",
     "apollo": "^2.21.2",
     "prettier": "^1.18.2",
     "tslint": "^5.18.0"
